--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,13 @@
+* 1.0.3 - 02/11/2015
+====================
+- Fixed: Some functions to support PHP 5.4
+
+
+* 1.0.2 - 31/10/2015
+====================
+- Added: Enable/disable option to front page sections
+
+
 * 1.0.1 - 30/10/2015
 ====================
 - Complete Theme Update
