--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,12 @@
+* 1.0.4 - 04/12/2015
+====================
+- Removed: iframe codes for oEmbed
+- Removed: Team widget area
+- Added: prefix for thumbnail sizes
+- Added: prefix customizer Class
+- Added: html5shiv
+- Fixed: error when pricing widget is empty
+
 * 1.0.3 - 02/11/2015
 ====================
 - Fixed: Some functions to support PHP 5.4
