--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,12 @@
+* 1.0.6 - 12/12/2015
+====================
+- Fixed: pricing widget.
+
+
+* 1.0.5 - 12/12/2015
+====================
+- Added: prefix for enqueued scripts.
+
 * 1.0.4 - 04/12/2015
 ====================
 - Removed: iframe codes for oEmbed
