--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,20 @@
+* 1.0.9 - 11/01/2016
+====================
+- Fixed: Learn More button on Welcome section
+
+
+* 1.0.8 - 21/12/2015
+====================
+- Changed: theme shows latest blog posts by default
+
+
+* 1.0.7 - 21/12/2015
+====================
+- Fixed: client widget.
+- Fixed: prefix on scripts
+- Added: licensing from images
+
+
 * 1.0.6 - 12/12/2015
 ====================
 - Fixed: pricing widget.
