--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+* 1.0.10 - 19/01/2016
+====================
+- Fixed: widgets alignment when they are too long on Phone section
+
+
 * 1.0.9 - 11/01/2016
 ====================
 - Fixed: Learn More button on Welcome section
