--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+* 1.0.11 - 19/01/2016
+====================
+- Fixed: issue with google font
+
+
 * 1.0.10 - 19/01/2016
 ====================
 - Fixed: widgets alignment when they are too long on Phone section
@@ -29,6 +34,7 @@
 ====================
 - Added: prefix for enqueued scripts.
 
+
 * 1.0.4 - 04/12/2015
 ====================
 - Removed: iframe codes for oEmbed
@@ -37,6 +43,7 @@
 - Added: prefix customizer Class
 - Added: html5shiv
 - Fixed: error when pricing widget is empty
+
 
 * 1.0.3 - 02/11/2015
 ====================
