--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+* 1.0.12 - 20/02/2016
+====================
+- Fixed: issue with image not saving on the customizer
+
+
 * 1.0.11 - 19/01/2016
 ====================
 - Fixed: issue with google font
